--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -1,73 +1,70 @@
-@each $breakpoint in map-keys($grid-breakpoints) {
-    @include media-breakpoint-up($breakpoint) {
-        $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+@for $i from 0 through 100 {
+    $j: $i*1;
+    .m-#{$j} {
+        margin: 1px*$j;
+    }
+    .mt-#{$j} {
+        margin-top: 1px*$j;
+    }
+    .mb-#{$j} {
+        margin-bottom: 1px*$j;
+    }
+    .ml-#{$j} {
+        margin-left: 1px*$j;
+    }
+    .mr-#{$j} {
+        margin-right: 1px*$j;
+    }
 
-        @each $prop, $abbrev in (margin: m, padding: p) {
-            @each $size, $length in $spacers {
-                .#{$abbrev}#{$infix}-#{$size} {
-                    #{$prop}: $length !important;
-                }
-                .#{$abbrev}t#{$infix}-#{$size},
-                .#{$abbrev}y#{$infix}-#{$size} {
-                    #{$prop}-top: $length !important;
-                }
-                .#{$abbrev}r#{$infix}-#{$size},
-                .#{$abbrev}x#{$infix}-#{$size} {
-                    #{$prop}-right: $length !important;
-                }
-                .#{$abbrev}b#{$infix}-#{$size},
-                .#{$abbrev}y#{$infix}-#{$size} {
-                    #{$prop}-bottom: $length !important;
-                }
-                .#{$abbrev}l#{$infix}-#{$size},
-                .#{$abbrev}x#{$infix}-#{$size} {
-                    #{$prop}-left: $length !important;
-                }
+    .p-#{$j} {
+        padding: 1px*$j;
+    }
+    .pt-#{$j} {
+        padding-top: 1px*$j;
+    }
+    .pb-#{$j} {
+        padding-bottom: 1px*$j;
+    }
+    .pl-#{$j} {
+        padding-left: 1px*$j;
+    }
+    .pr-#{$j} {
+        padding-right: 1px*$j;
+    }
+
+    @each $grid-breakpoint in $grid-breakpoints {
+        @include media-breakpoint-only(nth($grid-breakpoint, 1)) {
+            .m-#{nth($grid-breakpoint, 1)}-#{$j} {
+                margin: 1px*$j;
             }
-        }
-
-        @each $size, $length in $spacers {
-            @if $size != 0 {
-                .m#{$infix}-n#{$size} {
-                    margin: -$length !important;
-                }
-                .mt#{$infix}-n#{$size},
-                .my#{$infix}-n#{$size} {
-                    margin-top: -$length !important;
-                }
-                .mr#{$infix}-n#{$size},
-                .mx#{$infix}-n#{$size} {
-                    margin-right: -$length !important;
-                }
-                .mb#{$infix}-n#{$size},
-                .my#{$infix}-n#{$size} {
-                    margin-bottom: -$length !important;
-                }
-                .ml#{$infix}-n#{$size},
-                .mx#{$infix}-n#{$size} {
-                    margin-left: -$length !important;
-                }
+            .mt-#{nth($grid-breakpoint, 1)}-#{$j} {
+                margin-top: 1px*$j;
             }
-        }
+            .mb-#{nth($grid-breakpoint, 1)}-#{$j} {
+                margin-bottom: 1px*$j;
+            }
+            .ml-#{nth($grid-breakpoint, 1)}-#{$j} {
+                margin-left: 1px*$j;
+            }
+            .mr-#{nth($grid-breakpoint, 1)}-#{$j} {
+                margin-right: 1px*$j;
+            }
 
-        .m#{$infix}-auto {
-            margin: auto !important;
-        }
-        .mt#{$infix}-auto,
-        .my#{$infix}-auto {
-            margin-top: auto !important;
-        }
-        .mr#{$infix}-auto,
-        .mx#{$infix}-auto {
-            margin-right: auto !important;
-        }
-        .mb#{$infix}-auto,
-        .my#{$infix}-auto {
-            margin-bottom: auto !important;
-        }
-        .ml#{$infix}-auto,
-        .mx#{$infix}-auto {
-            margin-left: auto !important;
+            .p-#{nth($grid-breakpoint, 1)}-#{$j} {
+                padding: 1px*$j;
+            }
+            .pt-#{nth($grid-breakpoint, 1)}-#{$j} {
+                padding-top: 1px*$j;
+            }
+            .pb-#{nth($grid-breakpoint, 1)}-#{$j} {
+                padding-bottom: 1px*$j;
+            }
+            .pl-#{nth($grid-breakpoint, 1)}-#{$j} {
+                padding-left: 1px*$j;
+            }
+            .pr-#{nth($grid-breakpoint, 1)}-#{$j} {
+                padding-right: 1px*$j;
+            }
         }
     }
 }
